deployments/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnf-app
  namespace: production
  labels:
    app: cnf-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: cnf-app
  template:
    metadata:
      labels:
        app: cnf-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: cnf-app
          image: ghcr.io/kagchi/cnf-app-teep-2026:main-1769960546339 # {"$imagepolicy": "production:cnf-app"}
          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /health/live
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /health/live
              port: 3000
            failureThreshold: 30
            periodSeconds: 5
